# jadis

./: .gitignore  Cargo.toml  README.md  config.example.toml
assets/: mesh.frag  mesh.vert
src/: backend.rs  buffer.rs  config.rs  context.rs  hal_prelude.rs  input.rs  lib.rs  main.rs  prelude.rs  shader.rs  swapchain.rs  window.rs
