[package]
name = "jadis"
version = "0.0.1"
authors = ["kthwaite"]
edition = "2018"

[dependencies]
# graphics
glsl-to-spirv = "=0.1.6"
image = "~0.19.0"
winit = "=0.17.2"
# data
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
# logging
chrono = "*"
log = { version = "0.4", features = ["serde"] }
fern = "0.5"

[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx"
rev = "8f11f52"

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx"
rev = "8f11f52"

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx"
rev = "8f11f52"

[target.'cfg(windows)'.dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
rev = "8f11f52"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
rev = "8f11f52"

[build-dependencies]
glsl-to-spirv = "=0.1.6"